fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -48,28 +48,7 @@ iframe {
 } */
 
 ::-webkit-scrollbar {
-  width: 15px;
-  background-color: #FFFFFF;
-}
-
-@media screen and (max-width: 1023px) {
-  ::-webkit-scrollbar {
-    display: none;
-  }
-}
-
-::-webkit-scrollbar:hover {
-  background-color: #075F6B;
-}
-
-::-webkit-scrollbar-thumb {
-  cursor: pointer;
-  border-radius: 13px;
-  background-color: #075F6B;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background-color: #FFFFFF;
+  display: none;
 }
 
 @media screen and (max-width: 600px) {
